alignment fixed

--- a/style.css
+++ b/style.css
@@ -76,17 +76,19 @@ p{
     position: relative;
     z-index: 5000;
     padding-inline: 20px;
-    padding-top: 100px;
+    padding-top: 20px;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 .main-content{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 10px;
+    flex-grow: 1;
 }
 .main-logo{
     max-width: 26.8vh;
